# dobutsu-shogi

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
.github/workflows/: ci.yml
article/: draft.md  outline.md
assets/diagrams/emoji/: CREDITS.txt
data/: depth-profile.csv  perfect-game.txt
explorer/: README.md  index.html  serve.py
paper/: README.md
research/: findings.md  open-questions.md  reproduction.md  wikipedia-edit.md
research/repro/: README.md  pthread_barrier_shim.h
solver/: Cargo.toml  README.md
solver/src/: cohort.rs  cohort_tables.rs  lib.rs  main.rs  rank.rs
tools/: find_positions.c  gen_perfect_game.py  probe.c  render_board.py  render_og.py  verify_tb.py
