[package]
name = "dobutsu-solver"
version = "0.1.0"
edition = "2021"
description = "A from-scratch Dōbutsu Shōgi rules engine and tablebase solver, validated against clausecker/dobutsu."

[lib]
name = "dobutsu"
path = "src/lib.rs"

[[bin]]
name = "dobutsu-moves"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
